# RiffGenerator

./: .gitignore  .pylintrc  README.md  pyproject.toml
data/input/: nevergonnagiveyouup.mid  test_ukkonooa.mid  tuikituikitahtonen.mid
data/input/beatles/: blackbird.mid  herecomesthesun.mid  heyjude.mid  letitbe.mid  octopushgarden.mid  something.mid  yesterday.mid
data/input/major/: crazytrain.mid  everlong.mid  everybodywantstoruletheworld.mid  fakeplastictrees.mid  getlucky.mid  justlikeheaven.mid  letitbe.mid  octopushgarden.mid  takeonme.mid  thelessiknowthebetter.mid  thischarmingman.mid  tuikituikitahtonen.mid  vivaladiva.mid  youshookmeallnightlong.mid
data/input/metallica/: battery.mid  blackened.mid  creepingdeath.mid  dyerseve.mid  fourhorsemen.mid  mop.mid  sadbuttrue.mid  sandman.mid  sanitarium.mid
data/input/minor/: Heart-Shaped-Box-3.mid  Metallica - Nothing Else Matters.mid  REM - Losing My Religion.mid  beatit.mid  californication.mid  cure-a_night_like_this.mid  hurt.mid  linkin_park-numb.mid  madworld.mid  nevergonnagiveyouup.mid  stairwaytoheaven.mid
dokumentaatio/: käyttöohje.md  määrittelydokumentti  testausdokumentti.md  toteutusdokumentti.md  viikko1  viikko2  viikko3  viikko4  viikko5  viikko6
src/: index.py  main.py  markov.py  midi.py  trie.py
src/tests/: manual_testing.py  test_markov.py  test_midi.py  test_trie.py
