[tool.poetry]
name = "riffgenerator"
version = "0.1.0"
description = ""
authors = ["Olli Tiainen <olli.vj.tiainen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
