[tool.poetry]
name = "riffgenerator"
version = "0.1.0"
description = ""
authors = ["Olli Tiainen <olli.vj.tiainen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
music21 = "^9.5.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.5"
coverage = "^7.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
